# getdepth

./: .editorconfig  .gitignore  CMakeLists.txt  Calculate.cpp  Calculate.h  Compute.cpp  Compute.h  DepthCamera.cpp  DepthCamera.h  Ds325.cpp  Ds325.h  Fragment.cpp  Fragment.h  GgApplication.h  KinectV1.cpp  KinectV1.h  KinectV2.cpp  KinectV2.h  Mesh.cpp  Mesh.h  README.md  Rect.cpp  Rect.h  Rs400.cpp  Rs400.h  Shape.cpp  Shape.h  Window.cpp  Window.h  bilateral.comp  bilateral.frag  config.h  culling.geom  getdepth.cpp  getdepth.sln  getdepth.vcxproj  getdepth.vcxproj.filters  gg.cpp  gg.h  main.cpp  (+17 more)
OpenGL/Win32/Debug/lib/: glfw3.lib  glfw3dll.exp  glfw3dll.lib
OpenGL/Win32/Release/lib/: glfw3.lib  glfw3dll.exp  glfw3dll.lib
OpenGL/x64/Debug/lib/: glfw3.lib  glfw3dll.exp  glfw3dll.lib
OpenGL/x64/Release/lib/: glfw3.lib  glfw3dll.exp  glfw3dll.lib
include/GL/: glcorearb.h
lib/Win32/: glfw3.lib  glfw3d.lib  realsense-file.lib  realsense2-gl.lib  realsense2-gld.lib  realsense2.lib  realsense2d.lib  tm.lib
lib/x64/: glfw3.lib  glfw3d.lib  realsense-file.lib  realsense2-gl.lib  realsense2-gld.lib  realsense2.lib  realsense2d.lib  tm.lib
